<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="WhileRunningStart">Good luck!</string>
    <string name="WhileRunningAfter30Percent">Keep going!</string>
    <string name="WhileRunningAfter50Percent">Half way there!!</string>
    <string name="WhileRunningAfter85Percent">Almost done!</string>
    <string name="WhileRunningAfter100Percent">Good job! take a break and let\'s start again</string>
    <string name="timer_default">00:00:00</string>
    <string name="title_string">title string</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="enter_countdown_time">Enter countdown time</string>
</resources>